--- a/environment.yaml
+++ b/environment.yaml
@@ -4,5 +4,9 @@ channels:
 dependencies:
   - python=3.11.4
   - IPython=8.14.0
+  - ipykernel=6.23.3
+  - ipywidgets=8.0
   - pandas=2.0.2
   - tqdm=4.65.0
+  - discord.py=2.3.1
+  - requests=2.31.0
