fix: add runs on statement

--- a/.github/workflows/ffpe.yml
+++ b/.github/workflows/ffpe.yml
@@ -2,8 +2,12 @@ name: FFPE Protocol
 
 on:
   workflow_dispatch:
+    
 jobs:
   build-test-and-push:
+
+    runs-on: ubuntu-latest
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
