--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,20 +21,18 @@
         }
     },
     "customizations": {
-        // Configure properties specific to VS Code.
         "vscode": {
-            // Add the IDs of extensions you want installed when the container is created.
             "extensions": [
-                "ms-vscode-remote.vscode-remote-extensionpack",
-                "ms-azuretools.vscode-docker",
-                "eamodio.gitlens",
-                "esbenp.prettier-vscode",
-                "ms-python.black-formatter",
                 "mechatroner.rainbow-csv",
                 "janisdd.vscode-edit-csv",
+                "ms-azuretools.vscode-docker",
+                "ms-python.debugpy",
                 "ms-python.python",
+                "ms-python.vscode-pylance",
                 "ms-toolsai.jupyter",
-                "ms-toolsai.vscode-jupyter-powertoys"
+                "ms-toolsai.jupyter-keymap",
+                "ms-toolsai.jupyter-renderers",
+                "ms-toolsai.vscode-jupyter-cell-tags",
             ]
         }
     },
@@ -43,7 +41,6 @@
         "/bin/bash"
     ],
     "postAttachCommand": {
-        "server": "/usr/bin/micromamba env create --prefix /workspaces/protocol-timer/env -f /workspaces/protocol-timer/environment.yml",
         "server": "echo 'Create a python environment with `mamba env create --prefix ./env -f ./environment.yml` and activate it with `mamba activate ./env`'"
         
     }
