--- a/.github/workflows/ffpe.yml
+++ b/.github/workflows/ffpe.yml
@@ -24,7 +24,8 @@ jobs:
         with:
           secrets: ${{ toJSON(secrets) }}
       
-      - run: echo "Value of TEST_WEBHOOK: $TEST_WEBHOOK"
+      - run: |
+            echo 'Value of TEST_WEBHOOK: $TEST_WEBHOOK'
 
       - name: Workspace variable
         run: echo "$GITHUB_WORKSPACE"
