fix: testing another way of passing in secrets

--- a/.github/workflows/ffpe.yml
+++ b/.github/workflows/ffpe.yml
@@ -19,19 +19,15 @@ jobs:
       - name: Pull Docker image
         run: docker pull pranavmishra90/facsimilab-main:latest
 
-      - name: Pass github secrets in as environment variables
-        uses: oNaiPs/secrets-to-env-action@v1
-        with:
-          secrets: ${{ toJSON(secrets) }}
-      
-      - run: |
-            echo 'Value of TEST_WEBHOOK: $TEST_WEBHOOK'
-
       - name: Workspace variable
         run: echo "$GITHUB_WORKSPACE"
       
       - name: Run the FFPE Protocol with papermill
+        env: # Or as an environment variable
+          TEST_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
+          MATRIX_WEBHOOK: ${{ secrets.MATRIX_WEBHOOK }}
         run: |
+            echo 'Value of TEST_WEBHOOK: $TEST_WEBHOOK'
             docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=$MATRIX_WEBHOOK -e TEST_WEBHOOK=$TEST_WEBHOOK pranavmishra90/facsimilab-main:latest bash /home/coder/work/test/run-test.sh 
 
       - name: Write to workflow job summary
