--- a/.github/workflows/test-notebook.yml
+++ b/.github/workflows/test-notebook.yml
@@ -28,11 +28,11 @@ jobs:
           MATRIX_WEBHOOK: ${{ secrets.MATRIX_WEBHOOK }}
         run: |
             echo 'Value of TEST_WEBHOOK: $TEST_WEBHOOK'
-            docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=$MATRIX_WEBHOOK -e TEST_WEBHOOK=$TEST_WEBHOOK pranavmishra90/facsimilab-main:latest bash /home/coder/work/test/run-test.sh 
+            docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest bash /home/coder/work/test/run-test.sh 
 
       - name: Write to workflow job summary
         run: |
             header="# Protocol Timer Testing "
             echo "$header" > test/job_summary.md
-            echo "Check the [outgoing webhooks](https://webhook.drpranavmishra.com/#!/21adb3bf-8f2b-47d2-9fcc-674451e5e4cd/93753230-4e74-4922-96e1-4097fae1fbba/1)" >> test/job_summary.md
+            echo "Check the [outgoing webhooks](https://webhook.drpranavmishra.com/#!/f9cfa63f-805e-491d-9e4d-b24d92cf5da0/794312d9-d778-4a43-81e8-1794ae57ae99/1)" >> test/job_summary.md
             cat test/job_summary.md >> $GITHUB_STEP_SUMMARY
