add more action conditions

--- a/.gitea/workflows/test-gitea.yaml
+++ b/.gitea/workflows/test-gitea.yaml
@@ -1,6 +1,6 @@
 name: Gitea Actions Demo
 run-name: ${{ gitea.actor }} is testing out Gitea Actions 🚀
-on: [push]
+on: [push, pull-request, workflow_dispatch]
 
 jobs:
   Explore-Gitea-Actions:
