--- a/.gitea/workflows/test-gitea.yaml
+++ b/.gitea/workflows/test-gitea.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   Explore-Gitea-Actions:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-latest"
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ gitea.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by Gitea!"
