--- a/.gitea/workflows/test-notebook.yml
+++ b/.gitea/workflows/test-notebook.yml
@@ -31,8 +31,8 @@ jobs:
           TEST_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
           MATRIX_WEBHOOK: ${{ secrets.MATRIX_WEBHOOK }}
         run: |
-            echo 'Value of TEST_WEBHOOK: $TEST_WEBHOOK'
-            echo 'Value of MATRIX_WEBHOOK $MATRIX_WEBHOOK'
+            echo Value of TEST_WEBHOOK: $TEST_WEBHOOK
+            echo Value of MATRIX_WEBHOOK $MATRIX_WEBHOOK
             $MATRIX_WEBHOOK
       
       - name: Run the Test Notebook
@@ -40,7 +40,7 @@ jobs:
           TEST_WEBHOOK: ${{ secrets.TEST_WEBHOOK }}
           MATRIX_WEBHOOK: ${{ secrets.MATRIX_WEBHOOK }}
         run: |
-            echo 'Value of TEST_WEBHOOK: $TEST_WEBHOOK'
+            echo Value of TEST_WEBHOOK: $TEST_WEBHOOK
             docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest bash /home/coder/work/test/run-test.sh 
 
       - name: Write to workflow job summary
