--- a/.gitea/workflows/test-gitea.yaml
+++ b/.gitea/workflows/test-gitea.yaml
@@ -1,6 +1,11 @@
 name: Gitea Actions Demo
 run-name: ${{ gitea.actor }} is testing out Gitea Actions 🚀
-on: [push, pull-request, workflow_dispatch]
+on:
+  workflow_dispatch:
+  pull-request:
+  push:
+    branches:
+      - main
 
 jobs:
   Explore-Gitea-Actions:
