--- a/.gitea/workflows/test-notebook.yml
+++ b/.gitea/workflows/test-notebook.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
             echo Value of TEST_WEBHOOK: $TEST_WEBHOOK
             echo Value of MATRIX_WEBHOOK $MATRIX_WEBHOOK
-            $MATRIX_WEBHOOK
+            echo testing$MATRIX_WEBHOOK
       
       - name: Run the Test Notebook
         env: # Or as an environment variable
