--- a/.gitea/workflows/test-notebook.yml
+++ b/.gitea/workflows/test-notebook.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
             echo Value of TEST_WEBHOOK: $TEST_WEBHOOK
             echo value of MATRIX_WEBHOOK: $MATRIX_WEBHOOK
-            docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest ls /home/coder/work/
+            docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest  /usr/bin/find /home/coder -type f
 
             docker run --rm --user root -v $GITHUB_WORKSPACE:/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest bash /home/coder/work/protocol-timer/test/run-test.sh 
 
