--- a/.gitea/workflows/test-notebook.yml
+++ b/.gitea/workflows/test-notebook.yml
@@ -45,7 +45,7 @@ jobs:
             echo Value of TEST_WEBHOOK: $TEST_WEBHOOK
             echo value of MATRIX_WEBHOOK: $MATRIX_WEBHOOK
             docker run --rm --user 1000:1000 -v $(pwd):/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest  /usr/bin/find /home/coder -type f
-
+            docker run --rm --user 1000:1000 -v /workspace/Dr.PranavMishra/protocol-timer:/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest  /usr/bin/find /home/coder -type d
             docker run --rm --user 1000:1000 -v $(pwd):/home/coder/work -e MATRIX_WEBHOOK=${{ secrets.MATRIX_WEBHOOK }} -e TEST_WEBHOOK=${{ secrets.TEST_WEBHOOK }} pranavmishra90/facsimilab-main:latest bash /home/coder/work/test/run-test.sh 
 
       - name: Write to workflow job summary
